--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,35 @@ gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.67.1
 h11==0.14.0
+h5py==3.12.1
+html5lib==1.1
+idna==3.10
+joblib==1.4.2
+jwt==1.3.1
+keras==3.6.0
+kiwisolver==1.4.7
+libclang==18.1.1
+lxml==5.3.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+mdurl==0.1.2
+ml-dtypes==0.4.1
+multitasking==0.0.11
+namex==0.0.8
+numpy==2.0.2
+opt_einsum==3.4.0
+optree==0.13.0
+packaging==24.2
+pandas==2.2.3
+peewee==3.17.7
+pillow==11.0.0
+platformdirs==4.3.6
+protobuf==5.28.3
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
 Pygments==2.18.0
 PyJWT==2.9.0
 pymongo==4.10.1
@@ -42,3 +71,14 @@ tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorflow==2.18.0
 tensorflow-io-gcs-filesystem==0.31.0
+tensorflow_intel==2.18.0
+termcolor==2.5.0
+threadpoolctl==3.5.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.32.0
+webencodings==0.5.1
+Werkzeug==3.1.3
+wrapt==1.16.0
+yfinance==0.2.49
