--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,15 @@
-absl-py==2.1.0
-annotated-types==0.7.0
-anyio==4.6.2.post1
-astunparse==1.6.3
-bcrypt==4.2.0
-beautifulsoup4==4.12.3
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
-colorama==0.4.6
-contourpy==1.3.0
-cryptography==43.0.3
-cycler==0.12.1
-dnspython==2.7.0
-exceptiongroup==1.2.2
 fastapi==0.115.4
-flatbuffers==24.3.25
-fonttools==4.54.1
-frozendict==2.4.6
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.67.1
-h11==0.14.0
-h5py==3.12.1
-html5lib==1.1
-idna==3.10
-joblib==1.4.2
-jwt==1.3.1
-keras==3.6.0
-kiwisolver==1.4.7
-libclang==18.1.1
-lxml==5.3.0
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.2
-mdurl==0.1.2
-ml-dtypes==0.4.1
-multitasking==0.0.11
-namex==0.0.8
-numpy==2.0.2
-opt_einsum==3.4.0
-optree==0.13.0
-packaging==24.2
-pandas==2.2.3
-peewee==3.17.7
-pillow==11.0.0
-platformdirs==4.3.6
-protobuf==5.28.3
-pycparser==2.22
+uvicorn==0.22.0
 pydantic==2.9.2
-pydantic_core==2.23.4
-Pygments==2.18.0
-PyJWT==2.9.0
-pymongo==4.10.1
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.17
-pytz==2024.2
-requests==2.32.3
-rich==13.9.4
-scikit-learn==1.5.2
-scipy==1.14.1
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.6
-starlette==0.41.2
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow_intel==2.18.0
-termcolor==2.5.0
-threadpoolctl==3.5.0
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-uvicorn==0.32.0
-webencodings==0.5.1
-Werkzeug==3.1.3
-wrapt==1.16.0
 yfinance==0.2.49
+matplotlib==3.9.2
+aiofiles==23.1.0
+python-multipart==0.0.17
+httpx==0.24.1
+pandas==2.2.3
+numpy==2.0.2
+certifi==2024.8.30
+pytz==2024.2
+six==1.16.0
+scipy==1.14.1
+fastapi-middleware-cors==0.1.0
