--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.95.1           # Compatible with Python 3.9
 uvicorn==0.22.0           # Compatible with Python 3.9
-pydantic==2.9.2           # Compatible with Python 3.9
+pydantic==1.10.12         # Compatible with FastAPI 0.95.1
 yfinance==0.2.49          # Compatible with Python 3.9
 matplotlib==3.9.2         # Compatible with Python 3.9
 aiofiles==23.1.0          # Compatible with Python 3.9
